[gd_scene load_steps=67 format=3 uid="uid://bmx1a0ds3uvvr"]

[ext_resource type="Script" uid="uid://cuqmbv75ss1ei" path="res://Scripts/boss.gd" id="1_o1i15"]
[ext_resource type="Texture2D" uid="uid://d17wfhxjyt7km" path="res://assets/sprites/PostApocalypse_AssetPack_v1.1.2/Enemies/Undead executioner/Undead executioner puppet/png/death.png" id="2_we8h1"]
[ext_resource type="Texture2D" uid="uid://cnkceem4o2smh" path="res://assets/sprites/PostApocalypse_AssetPack_v1.1.2/Enemies/Undead executioner/Undead executioner puppet/png/idle2.png" id="3_kvofc"]
[ext_resource type="Texture2D" uid="uid://bsn11uq5hox3t" path="res://assets/sprites/PostApocalypse_AssetPack_v1.1.2/Enemies/Undead executioner/Undead executioner puppet/png/attacking.png" id="4_ef0k6"]
[ext_resource type="Texture2D" uid="uid://bspbeflcwuobb" path="res://assets/sprites/PostApocalypse_AssetPack_v1.1.2/Enemies/Undead executioner/Undead executioner puppet/png/skill1.png" id="5_ry61v"]
[ext_resource type="Texture2D" uid="uid://p43xrg0fqbvc" path="res://assets/sprites/PostApocalypse_AssetPack_v1.1.2/Enemies/Undead executioner/Undead executioner puppet/png/summon.png" id="6_kvofc"]
[ext_resource type="Texture2D" uid="uid://cfktk4rg1tnlj" path="res://assets/sprites/safezone_nobg.png" id="7_kles1"]
[ext_resource type="AudioStream" uid="uid://c6kscdyr7kq1s" path="res://audio/die.mp3" id="8_yq25j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yq25j"]
radius = 30.0
height = 112.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kles1"]
atlas = ExtResource("2_we8h1")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_etj48"]
atlas = ExtResource("2_we8h1")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3lj5"]
atlas = ExtResource("2_we8h1")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s1j2"]
atlas = ExtResource("2_we8h1")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_km2bi"]
atlas = ExtResource("2_we8h1")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0duv"]
atlas = ExtResource("2_we8h1")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc4na"]
atlas = ExtResource("2_we8h1")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8arul"]
atlas = ExtResource("2_we8h1")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d2wm"]
atlas = ExtResource("2_we8h1")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrd6h"]
atlas = ExtResource("2_we8h1")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g8a4"]
atlas = ExtResource("2_we8h1")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8fku"]
atlas = ExtResource("2_we8h1")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jruke"]
atlas = ExtResource("2_we8h1")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysc7m"]
atlas = ExtResource("2_we8h1")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ke2s"]
atlas = ExtResource("2_we8h1")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppmbc"]
atlas = ExtResource("2_we8h1")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw08n"]
atlas = ExtResource("2_we8h1")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdfxm"]
atlas = ExtResource("2_we8h1")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm1kr"]
atlas = ExtResource("3_kvofc")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_akhi5"]
atlas = ExtResource("3_kvofc")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwlhh"]
atlas = ExtResource("3_kvofc")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvkcc"]
atlas = ExtResource("3_kvofc")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oehbi"]
atlas = ExtResource("3_kvofc")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3701"]
atlas = ExtResource("3_kvofc")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b5wb"]
atlas = ExtResource("3_kvofc")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeb72"]
atlas = ExtResource("3_kvofc")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdn2a"]
atlas = ExtResource("4_ef0k6")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvoe5"]
atlas = ExtResource("4_ef0k6")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1mfc"]
atlas = ExtResource("4_ef0k6")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vomys"]
atlas = ExtResource("4_ef0k6")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cas4q"]
atlas = ExtResource("4_ef0k6")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxe4g"]
atlas = ExtResource("4_ef0k6")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr5wv"]
atlas = ExtResource("4_ef0k6")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_44gid"]
atlas = ExtResource("4_ef0k6")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_euk8c"]
atlas = ExtResource("4_ef0k6")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlyfq"]
atlas = ExtResource("4_ef0k6")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c30dg"]
atlas = ExtResource("4_ef0k6")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubnwj"]
atlas = ExtResource("4_ef0k6")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvofc"]
atlas = ExtResource("5_ry61v")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdnqb"]
atlas = ExtResource("5_ry61v")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_blebq"]
atlas = ExtResource("5_ry61v")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdjsq"]
atlas = ExtResource("5_ry61v")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bqc8"]
atlas = ExtResource("5_ry61v")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr7pa"]
atlas = ExtResource("5_ry61v")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqge2"]
atlas = ExtResource("5_ry61v")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6e5o"]
atlas = ExtResource("5_ry61v")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhrkw"]
atlas = ExtResource("5_ry61v")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n14lx"]
atlas = ExtResource("5_ry61v")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_04j31"]
atlas = ExtResource("5_ry61v")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef0k6"]
atlas = ExtResource("6_kvofc")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry61v"]
atlas = ExtResource("6_kvofc")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcyd7"]
atlas = ExtResource("6_kvofc")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x36vw"]
atlas = ExtResource("6_kvofc")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ein1h"]
atlas = ExtResource("6_kvofc")
region = Rect2(0, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_xcyd7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kles1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etj48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3lj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s1j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km2bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0duv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc4na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8arul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d2wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrd6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g8a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8fku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jruke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysc7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ke2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppmbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw08n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdfxm")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm1kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akhi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwlhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvkcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oehbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3701")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b5wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeb72")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdn2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvoe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1mfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vomys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cas4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxe4g")
}],
"loop": false,
"name": &"normalattack_1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr5wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44gid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euk8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlyfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c30dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubnwj")
}],
"loop": false,
"name": &"normalattack_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvofc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdnqb")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_blebq")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_wdjsq")
}],
"loop": false,
"name": &"return",
"speed": 8.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_6bqc8")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_gr7pa")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_eqge2")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_w6e5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhrkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n14lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04j31")
}],
"loop": false,
"name": &"skill",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef0k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry61v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcyd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x36vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ein1h")
}],
"loop": false,
"name": &"summon",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x36vw"]
radius = 80.0
height = 160.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yq25j"]
size = Vector2(50.630775, 77.470825)

[node name="Boss" type="CharacterBody2D" groups=["boss"]]
collision_layer = 4
collision_mask = 24
script = ExtResource("1_o1i15")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["monster"]]
position = Vector2(-15, 14)
shape = SubResource("CapsuleShape2D_yq25j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.03, 2.03)
sprite_frames = SubResource("SpriteFrames_xcyd7")
animation = &"normalattack_2"
frame = 5
frame_progress = 1.0

[node name="attackrange" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackrange" groups=["monster"]]
position = Vector2(-15, 14)
shape = SubResource("CapsuleShape2D_yq25j")

[node name="attack1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack1"]
position = Vector2(21, -10)
shape = SubResource("CapsuleShape2D_x36vw")

[node name="attack2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack2"]
position = Vector2(17.999998, 11)
scale = Vector2(3.0811298, 1.1100953)
shape = SubResource("RectangleShape2D_yq25j")

[node name="SafeZonePos" type="Node2D" parent="."]
visible = false

[node name="SafeZonePos" type="Sprite2D" parent="SafeZonePos"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_kles1")

[node name="sfx_boss_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_yq25j")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
